# serializer version: 1
# name: TestFileFormatGoldenFromFiles.test_basic_html_file
  '''
  # Document Heading 1

  This is a simple test document.

  Second paragraph with **bold** text and *italic* text and ***both***

  Here?s some <u>underlined text</u>.

  Here we want a longer paragraph that can span a few lines in a document. It should be like 3 or 4 sentences, which is the normal length of a paragraph. We can even include some **formatting** for emphasis. It?s getting pretty long now, I think we?re almost done.

  ## First Section Heading

  Right before this was the equivalent of an ?h2? heading. Now we have some more stuff in this section. I think a [hyperlink](https://example.com/) would be cool.

  Now for an unordered list:

  * First item on unordered list
  * Second item
  * Third

  Let?s add some more stuff

  ## Second Section Heading

  And here?s an ordered list:

  1. First item on ordered list
  2. Second item on ordered list
  3. Third item on ordered list

  And now a multilevel list:

  * First level
  * First level 2
    - Second level 1
    - Second level 2
  * First level 3
  * First level 4
    - Second level 3
    - Second level 4
  * First level 5

  And a simple table with a header:

  | Header A | Header B | Header C | Header D |
  |---|---|---|---|
  | Row 1, Col 1 | Row 1, Col 2 | Row 1, Col 3 | Rol 1, Col 4 |
  | Row 2, Col 1 | Row 2, Col 2 | Row 2, Col 3 | Row 2, Col 4 |

  We'll put an inline image:

  ![Some really cool alt text](nonexistent.jpg)

  And the end.
  '''
# ---
# name: TestFileFormatGoldenFromFiles.test_basic_odt_file
  '''
  # Document Heading 1

  This is a simple test document.

  Second paragraph with bold text and italic text and both

  Here’s some underlined text.

  Here we want a longer paragraph that can span a few lines in a document. It should be like 3 or 4 sentences, which is the normal length of a paragraph. We can even include some formatting for emphasis. It’s getting pretty long now, I think we’re almost done.

  ## First Section Heading

  Right before this was the equivalent of an “h2” heading. Now we have some more stuff in this section. I think a [hyperlink](https://example.com/) would be cool.

  Now for an unordered list:

  * First item on unordered list
  * Second item
  * Third

  Let’s add some more stuff

  ## Second Section Heading

  And here’s an ordered list:

  * First item on ordered list
  * Second item on ordered list
  * Third item on ordered list

  And now a multilevel list:

  * First level
  * First level 2
    - Second level 1
    - Second level 2
  * First level 3
  * First level 4
    - Second level 3
    - Second level 4
  * First level 5

  And a simple table with a header:

  |  |  |  |  |
  |:---|:---|:---|:---|
  |  |  |  |  |
  |  |  |  |  |

  We’ll put an inline image:

  And the end.
  '''
# ---
# name: TestFileFormatGoldenFromFiles.test_basic_pptx_file
  '''
  ## Basic Powerpoint

  * For testing

  ---

  ## First Content Slide

  * Just a normal unordered list
  * Nothing fancy on this slide

  ---

  ## Second content slide

  This one has**formatting**that is<u>fancier</u>*sometimes*even***too fancy***

  * And we’ll do a nested list
  * Here’s the first nested item
  * And the second
  * Third
  * And back out
  * Here’s a hyperlink to http://www.example.com

  ---

  ## Two-column slide

  * Left column
  * Simple list

  Nothing Fancy

  * Right column
  * Simple list
  * Nothing fancy

  ---

  ## Numbered lists

  1. Numbered list first item
  2. Second item
  3. Third item
  4. Nested numbered
  5. Second
  6. Third
  7. Back out

  ---
  '''
# ---
# name: TestFileFormatGoldenFromFiles.test_basic_xlsx_file
  '''
  ## Sheet1

  | Basic Spreadsheet | Column A | Column B | Column C |
  |:---:|:---:|:---:|:---:|
  | Row 1 | apple | banana | carrot |
  | Row 2 | ape | bear | cat |
  | Row 3 | astronomy | biology | chemistry |

  ## Sheet2

  | Sheet 2 | 1 | 2 | 3 |
  |:---:|:---:|:---:|:---:|
  |  | 4 | 5 | 6 |
  '''
# ---
# name: TestMarkdownRoundtripGolden.test_markdown_roundtrip_basic
  '''
  # Setup Guide

  1. Install dependencies
     - Use `uv pip install -r requirements.txt`
     - Verify versions
  2. Run the application

  ```python
  def main():
      print("Hello from markdown fixtures!")
  ```
  '''
# ---
# name: TestMarkdownRoundtripGolden.test_markdown_roundtrip_with_table
  '''
  # Quarterly Results

  Below is a table with the latest quarterly metrics.

  | Quarter | Revenue | Growth |
  |---|---|---|
  | Q1 | $1.2M | 12% |
  | Q2 | $1.4M | 16% |
  | Q3 | $1.6M | 18% |
  | Q4 | $1.9M | 22% |

  **Highlights**: *Strong* growth in the second half of the year.
  '''
# ---
# name: TestPPTXGolden.test_basic_pptx_conversion
  '''
  ## Test Presentation

  * Generated for testing PPTX to Markdown conversion

  ---

  ## Main Content Slide

  * First bullet point
  * Second bullet point
  * Sub-bullet point
  * Another sub-bullet
  * Third main bullet point

  ---

  ## Section 2: Additional Content

  ---

  ## Features and Benefits

  * Easy to use interface
  * Comprehensive feature set
  * Document conversion
  * Multiple format support
  * Reliable performance

  ---
  '''
# ---
# name: TestPPTXGolden.test_pptx_attachment_mode_skip
  '''
  ## Test Presentation

  * Generated for testing PPTX to Markdown conversion

  ---

  ## Main Content Slide

  * First bullet point
  * Second bullet point
  * Sub-bullet point
  * Another sub-bullet
  * Third main bullet point

  ---

  ## Section 2: Additional Content

  ---

  ## Features and Benefits

  * Easy to use interface
  * Comprehensive feature set
  * Document conversion
  * Multiple format support
  * Reliable performance

  ---
  '''
# ---
# name: TestPPTXGolden.test_pptx_with_slide_numbers
  '''
  ## Slide 1: Test Presentation

  * Generated for testing PPTX to Markdown conversion

  ---

  ## Slide 2: Main Content Slide

  * First bullet point
  * Second bullet point
  * Sub-bullet point
  * Another sub-bullet
  * Third main bullet point

  ---

  ## Slide 3: Section 2: Additional Content

  ---

  ## Slide 4: Features and Benefits

  * Easy to use interface
  * Comprehensive feature set
  * Document conversion
  * Multiple format support
  * Reliable performance

  ---
  '''
# ---
